--- a/assets/dev/scss/frontend/widgets/progress.scss
+++ b/assets/dev/scss/frontend/widgets/progress.scss
@@ -3,90 +3,81 @@
 //
 
 .qazana-widget-progress {
-	text-align: $start;
+    text-align: $start;
+}
+
+.qazana-widget-container {
+    display: flex;
+    flex-direction: column;
 }
 
 .qazana-progress-wrapper {
-	position: relative;
-	background-color: $progress-bg;
-	color: $progress-text;
-	height: 30px;
-	line-height: 30px;
-	border-radius: 2px;
+    position: relative;
+    background-color: $progress-bg;
+    color: $progress-text;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    border-radius: 2px;
+}
 
+.qazana-progress-percentage {
+    align-self: flex-end;
+    position: absolute;
 }
 
 .qazana-progress-bar {
-	position: absolute;
-	display: inline-block;
-	background-color: $gray;
-	height: 100%;
-	width: 0;
-	border-radius: 2px;
-	transition: width 1s ease-in-out;
-}
-
-.qazana-progress-inner-text {
-	display: inline-block;
-	position: absolute;
-	@include start(0);
-	padding: 0 15px;
-	font-size: 11px;
-	width: 0;
-	transition: width 1s ease-in-out;
-
-	.qazana-progress-percentage {
-		position: relative;
-		float: $end;
-	}
+    position: absolute;
+    display: inline-block;
+    background-color: $gray;
+    height: 100%;
+    width: 0;
+    border-radius: 2px;
+    transition: width 1s ease-in-out;
 }
 
 .qazana-widget-progress {
-	.qazana-progress-wrapper {
+    .qazana-progress-wrapper {
 
-		&.progress-info {
+        &.progress-info {
 
-			.qazana-progress-bar {
-				background-color: $info;
-			}
-		}
+            .qazana-progress-bar {
+                background-color: $info;
+            }
+        }
 
-		&.progress-success {
+        &.progress-success {
 
-			.qazana-progress-bar {
-				background-color: $success;
-			}
-		}
+            .qazana-progress-bar {
+                background-color: $success;
+            }
+        }
 
-		&.progress-warning {
+        &.progress-warning {
 
-			.qazana-progress-bar {
-				background-color: $warning;
-			}
-		}
+            .qazana-progress-bar {
+                background-color: $warning;
+            }
+        }
 
-		&.progress-danger {
+        &.progress-danger {
 
-			.qazana-progress-bar {
-				background-color: $danger;
-			}
-		}
-	}
+            .qazana-progress-bar {
+                background-color: $danger;
+            }
+        }
+    }
 }
 
 .qazana-progress .qazana-title {
-	display: block;
+    display: block;
 }
 
 // Responsive mode
 @media (max-width: $screen-sm-max) {
 
-	.qazana-progress-wrapper {
-		height: 25px;
-		line-height: 25px;
-
-		.qazana-progress-inner-text {
-			padding: 0 10px;
-		}
-	}
+    .qazana-progress-wrapper {
+        height: 25px;
+        line-height: 25px;
+    }
 }
