--- a/assets/dev/scss/frontend/_forms.scss
+++ b/assets/dev/scss/frontend/_forms.scss
@@ -68,7 +68,7 @@
 			font-style: inherit;
 			text-transform: inherit;
 			letter-spacing: inherit;
-			line-height: inherit;
+			line-height: 1.2;
 			flex-basis: 100%;
 			@include padding-end(20px);
 		}
