--- a/includes/extensions/tabs/assets/css/direction/style-rtl.css
+++ b/includes/extensions/tabs/assets/css/direction/style-rtl.css
@@ -1,6 +1,8 @@
 .qazana-widget-tabs.qazana-tabs-view-vertical .qazana-tabs-wrapper {
   width: 25%;
-  flex-shrink: 0; }
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0; }
 
 .qazana-widget-tabs.qazana-tabs-view-vertical .qazana-tab-desktop-title.qazana-active {
   border-right-style: none; }
@@ -11,7 +13,9 @@
     border-right-style: solid; }
   .qazana-widget-tabs.qazana-tabs-view-vertical .qazana-tab-desktop-title.qazana-active:before {
     top: 0;
-    transform: translateY(-100%); }
+    -webkit-transform: translateY(-100%);
+        -ms-transform: translateY(-100%);
+            transform: translateY(-100%); }
   .qazana-widget-tabs.qazana-tabs-view-vertical .qazana-tab-desktop-title.qazana-active:after {
     top: 100%; }
 
@@ -23,11 +27,15 @@
   text-transform: uppercase;
   font-size: 11px; }
   .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title:first-child {
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px; }
+    -webkit-border-top-left-radius: 4px;
+            border-top-left-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+            border-bottom-left-radius: 4px; }
   .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title:last-child {
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px; }
+    -webkit-border-top-right-radius: 4px;
+            border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+            border-bottom-right-radius: 4px; }
   .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title,
   .qazana-widget-tabs.qazana-tabs-view-horizontal .qazana-tab-desktop-title a {
     color: #383838; }
@@ -67,17 +75,30 @@
   padding: 20px 0;
   display: none;
   opacity: 0;
+  -webkit-transition: opacity 0.3s cubic-bezier(0.5, 0, 0.7, 0.3), -webkit-transform 0.25s cubic-bezier(0.5, 0, 0.7, 0.3);
+  transition: opacity 0.3s cubic-bezier(0.5, 0, 0.7, 0.3), -webkit-transform 0.25s cubic-bezier(0.5, 0, 0.7, 0.3);
+  -o-transition: transform 0.25s cubic-bezier(0.5, 0, 0.7, 0.3), opacity 0.3s cubic-bezier(0.5, 0, 0.7, 0.3);
   transition: transform 0.25s cubic-bezier(0.5, 0, 0.7, 0.3), opacity 0.3s cubic-bezier(0.5, 0, 0.7, 0.3);
-  transform: translateY(50%);
+  transition: transform 0.25s cubic-bezier(0.5, 0, 0.7, 0.3), opacity 0.3s cubic-bezier(0.5, 0, 0.7, 0.3), -webkit-transform 0.25s cubic-bezier(0.5, 0, 0.7, 0.3);
+  -webkit-transform: translateY(50%);
+      -ms-transform: translateY(50%);
+          transform: translateY(50%);
   visibility: hidden; }
   .qazana-widget-tabs .qazana-tab-content.qazana-active {
-    transform: translateY(0);
-    transform: translateX(0);
+    -webkit-transform: translateY(0);
+        -ms-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transform: translateX(0);
+        -ms-transform: translateX(0);
+            transform: translateX(0);
     opacity: 1;
     visibility: visible;
-    animation-name: qazanaChangeTabSlideActive;
-    animation-timing-function: ease;
-    animation-duration: .4s; }
+    -webkit-animation-name: qazanaChangeTabSlideActive;
+            animation-name: qazanaChangeTabSlideActive;
+    -webkit-animation-timing-function: ease;
+            animation-timing-function: ease;
+    -webkit-animation-duration: .4s;
+            animation-duration: .4s; }
 
 @media (max-width: 767px) {
   .qazana-tabs .qazana-tab-title {
@@ -92,18 +113,33 @@
 
 @media (min-width: 768px) {
   .qazana-widget-tabs.qazana-tabs-view-vertical .qazana-tabs {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex; }
   .qazana-widget-tabs.qazana-tabs-view-vertical .qazana-tabs-content-wrapper {
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
     border-style: solid;
     border-left-style: none; }
   .qazana-tabs .qazana-tab-mobile-title {
     display: none; } }
 
+@-webkit-keyframes qazanaChangeTabSlideActive {
+  from {
+    -webkit-transform: translateX(50px);
+            transform: translateX(50px); }
+  to {
+    -webkit-transform: translateX(0);
+            transform: translateX(0); } }
+
 @keyframes qazanaChangeTabSlideActive {
   from {
-    transform: translateX(50px); }
+    -webkit-transform: translateX(50px);
+            transform: translateX(50px); }
   to {
-    transform: translateX(0); } }
-
+    -webkit-transform: translateX(0);
+            transform: translateX(0); } }
 /*# sourceMappingURL=style-rtl.css.map */
