--- a/assets/dev/scss/editor/_spacer.scss
+++ b/assets/dev/scss/editor/_spacer.scss
@@ -1,25 +1,30 @@
-.qazana-spacer {
-    background: linear-gradient(135deg,rgba(30,87,153,0) 47%,rgba(30,87,153,0) 48%,rgba(141,210,255,0.53) 49%,rgba(141,210,255,0.53) 51%,rgba(30,87,153,0) 52%,rgba(30,87,153,0) 53%);
-    background-size: 6px 6px;
-    text-align: center;
-    body.qazana-editor-preview &  {
-        background: transparent;
+.qazana-edit-mode {
+    .qazana-spacer {
+        background: linear-gradient(135deg, rgba(30, 87, 153, 0) 47%, rgba(30, 87, 153, 0) 48%, rgba(141, 210, 255, 0.53) 49%, rgba(141, 210, 255, 0.53) 51%, rgba(30, 87, 153, 0) 52%, rgba(30, 87, 153, 0) 53%);
+        background-size: 6px 6px;
+        text-align: center;
     }
-}
 
-span.qazana-space-resize-value {
-    height: 100%;
-    display: flex;
-    white-space: nowrap;
-    color: $primary;
-    font-family: sans-serif;
-    font-size: 11px;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-}
+    span.qazana-space-resize-value {
+        height: 100%;
+        display: flex;
+        white-space: nowrap;
+        color: $primary;
+        font-family: sans-serif;
+        font-size: 11px;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+    }
 
-body.qazana-editor-preview .qazana-space-resize-value {
-    display: none;
+    &.qazana-edit-area-preview {
+        .qazana-spacer {
+            background: transparent;
+        }
+
+        .qazana-space-resize-value {
+            display: none;
+        }
+    }
 }
