--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -151,7 +151,6 @@
       -ms-flex-pack: center;
           justify-content: center; }
 
-.qazana-inline-content-right,
 .qazana-inline-content-right .qazana-inline-content {
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
@@ -1212,6 +1211,7 @@ ul.qazana-icon-list-items.qazana-inline-items {
   width: 0;
   height: 0; }
 
+.qazana-form-fields,
 .qazana-form-fields-wrapper {
   display: -webkit-box;
   display: -webkit-flex;
@@ -1223,14 +1223,20 @@ ul.qazana-icon-list-items.qazana-inline-items {
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
-          align-items: center;
+          align-items: center; }
+
+.qazana-form-fields-wrapper {
   width: 100%; }
-  .qazana-form-fields-wrapper.qazana-labels-above > .qazana-field-group > input, .qazana-form-fields-wrapper.qazana-labels-above > .qazana-field-group > textarea, .qazana-form-fields-wrapper.qazana-labels-above > .qazana-field-group > .qazana-select-wrapper, .qazana-form-fields-wrapper.qazana-labels-above > .qazana-field-group .qazana-field-subgroup {
+  .qazana-form-fields-wrapper.qazana-labels-above .qazana-form-field > .qazana-field-group > input,
+  .qazana-form-fields-wrapper.qazana-labels-above .qazana-form-field > .qazana-field-group > textarea,
+  .qazana-form-fields-wrapper.qazana-labels-above .qazana-form-field > .qazana-field-group > .qazana-select-wrapper,
+  .qazana-form-fields-wrapper.qazana-labels-above .qazana-form-field > .qazana-field-group .qazana-field-subgroup {
     -webkit-flex-basis: 100%;
         -ms-flex-preferred-size: 100%;
             flex-basis: 100%;
     max-width: 100%; }
-  .qazana-form-fields-wrapper.qazana-labels-inline > .qazana-field-group > input, .qazana-form-fields-wrapper.qazana-labels-inline > .qazana-field-group .qazana-select-wrapper {
+  .qazana-form-fields-wrapper.qazana-labels-inline .qazana-form-field > .qazana-field-group > input,
+  .qazana-form-fields-wrapper.qazana-labels-inline .qazana-form-field > .qazana-field-group .qazana-select-wrapper {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
         -ms-flex-positive: 1;
