--- a/assets/dev/scss/frontend/_forms.scss
+++ b/assets/dev/scss/frontend/_forms.scss
@@ -1,286 +1,294 @@
 //
 // Forms (Input, Textarea, Select Etc..)
 //
-
+.qazana-form-fields,
 .qazana-form-fields-wrapper {
-	display: flex;
+    display: flex;
     flex-wrap: wrap;
     align-items: center;
+}
+
+.qazana-form-fields-wrapper {
     width: 100%;
 
-	&.qazana-labels-above {
-		> .qazana-field-group {
+    &.qazana-labels-above {
+        .qazana-form-field > .qazana-field-group {
 
-			> input, > textarea, > .qazana-select-wrapper, .qazana-field-subgroup {
-				flex-basis: 100%;
-				max-width: 100%; // Fix for Firefox browser
-			}
-		}
-	}
+            >input,
+            >textarea,
+            >.qazana-select-wrapper,
+            .qazana-field-subgroup {
+                flex-basis: 100%;
+                max-width: 100%; // Fix for Firefox browser
+            }
+        }
+    }
 
-	&.qazana-labels-inline {
+    &.qazana-labels-inline {
 
-		> .qazana-field-group {
+        .qazana-form-field >.qazana-field-group {
 
-			> input, .qazana-select-wrapper {
-				flex-grow: 1;
-			}
-		}
-	}
+            >input,
+            .qazana-select-wrapper {
+                flex-grow: 1;
+            }
+        }
+    }
 }
 
 .qazana-field-group {
-	flex-wrap: wrap;
-	align-items: center;
+    flex-wrap: wrap;
+    align-items: center;
     overflow: hidden;
 
-	.qazana-field-textual {
-		width: 100%;
-		max-width: 100%; // Tweak for themes that set this property
-		border: 1px solid $gray;
-		background-color: transparent;
-		color: $gray-darker;
-		vertical-align: middle;
-		flex-grow: 1;
+    .qazana-field-textual {
+        width: 100%;
+        max-width: 100%; // Tweak for themes that set this property
+        border: 1px solid $gray;
+        background-color: transparent;
+        color: $gray-darker;
+        vertical-align: middle;
+        flex-grow: 1;
 
-		&:focus {
-			box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1) inset;
-			outline: 0;
-		}
+        &:focus {
+            box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1) inset;
+            outline: 0;
+        }
 
-		// Input Placeholder
-		@include input-placeholder();
-	}
+        // Input Placeholder
+        @include input-placeholder();
+    }
 
-	.qazana-select-wrapper {
-		display: flex;
-		position: relative;
-		width: 100%;
+    .qazana-select-wrapper {
+        display: flex;
+        position: relative;
+        width: 100%;
 
-		select {
-			appearance: none;
-			-webkit-appearance: none;
-			-moz-appearance: none;
-			color: inherit;
-			font-size: inherit;
-			font-family: inherit;
-			font-weight: inherit;
-			font-style: inherit;
-			text-transform: inherit;
-			letter-spacing: inherit;
-			line-height: 1.2;
-			flex-basis: 100%;
-			@include padding-end(20px);
-		}
+        select {
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            color: inherit;
+            font-size: inherit;
+            font-family: inherit;
+            font-weight: inherit;
+            font-style: inherit;
+            text-transform: inherit;
+            letter-spacing: inherit;
+            line-height: 1.2;
+            flex-basis: 100%;
+            @include padding-end(20px);
+        }
 
-		&:before {
-			content: '\f0d7';
-			font-family: 'FontAwesome';
-			font-size: 15px;
-			position: absolute;
-			top: 50%;
-			transform: translateY(-50%);
-			@include end(10px);
-			pointer-events: none;
-		}
-	}
-	&.qazana-field-type-select-multiple{
-		.qazana-select-wrapper:before {
-			content: '';
-		}
-	}
+        &:before {
+            content: '\f0d7';
+            font-family: 'FontAwesome';
+            font-size: 15px;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            @include end(10px);
+            pointer-events: none;
+        }
+    }
+
+    &.qazana-field-type-select-multiple {
+        .qazana-select-wrapper:before {
+            content: '';
+        }
+    }
 }
 
 .qazana-field-subgroup {
-	display: flex;
-	flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
 
-	.qazana-field-option {
+    .qazana-field-option {
 
-		label {
-			display: inline-block;
-		}
-	}
+        label {
+            display: inline-block;
+        }
+    }
 
-	&.qazana-subgroup-inline {
+    &.qazana-subgroup-inline {
 
-		.qazana-field-option {
-			@include padding-end(10px);
-		}
-	}
+        .qazana-field-option {
+            @include padding-end(10px);
+        }
+    }
 
-	&:not(.qazana-subgroup-inline) {
+    &:not(.qazana-subgroup-inline) {
 
-		.qazana-field-option {
-			flex-basis: 100%;
-		}
-	}
+        .qazana-field-option {
+            flex-basis: 100%;
+        }
+    }
 }
 
 .qazana-field-label {
-	cursor: pointer;
+    cursor: pointer;
 
-	.qazana-mark-required &:after {
-		content: '*';
-		color: red;
-		@include padding-start(0.2em);
-	}
+    .qazana-mark-required &:after {
+        content: '*';
+        color: red;
+        @include padding-start(0.2em);
+    }
 }
 
 // Keep the following out from another parent selector!
 .qazana-field-textual {
-	line-height: 1.4;
+    line-height: 1.4;
 
-	&.qazana-size- {
+    &.qazana-size- {
 
-		&xs {
-			font-size: 13px;
-			min-height: 33px;
-			padding: 4px 12px;
-			border-radius: 2px;
-		}
+        &xs {
+            font-size: 13px;
+            min-height: 33px;
+            padding: 4px 12px;
+            border-radius: 2px;
+        }
 
-		&sm {
-			font-size: 15px;
-			min-height: 40px;
-			padding: 5px 14px;
-			border-radius: 3px;
-		}
+        &sm {
+            font-size: 15px;
+            min-height: 40px;
+            padding: 5px 14px;
+            border-radius: 3px;
+        }
 
-		&md {
-			font-size: 16px;
-			min-height: 47px;
-			padding: 6px 16px;
-			border-radius: 4px;
-		}
+        &md {
+            font-size: 16px;
+            min-height: 47px;
+            padding: 6px 16px;
+            border-radius: 4px;
+        }
 
-		&lg {
-			font-size: 18px;
-			min-height: 59px;
-			padding: 7px 20px;
-			border-radius: 5px;
-		}
+        &lg {
+            font-size: 18px;
+            min-height: 59px;
+            padding: 7px 20px;
+            border-radius: 5px;
+        }
 
-		&xl {
-			font-size: 20px;
-			min-height: 72px;
-			padding: 8px 24px;
-			border-radius: 6px;
-		}
-	}
+        &xl {
+            font-size: 20px;
+            min-height: 72px;
+            padding: 8px 24px;
+            border-radius: 6px;
+        }
+    }
 }
 
 @mixin btn-align() {
 
-	&center .qazana-field-type-submit {
-		justify-content: center;
-	}
+    &center .qazana-field-type-submit {
+        justify-content: center;
+    }
 
-	&stretch .qazana-field-type-submit {
-		button {
-			flex-basis: 100%;
-		}
-	}
+    &stretch .qazana-field-type-submit {
+        button {
+            flex-basis: 100%;
+        }
+    }
 
-	&start .qazana-field-type-submit{
-		justify-content: getValueByDirection(flex-start, flex-end);
-	}
+    &start .qazana-field-type-submit {
+        justify-content: getValueByDirection(flex-start, flex-end);
+    }
 
-	&end .qazana-field-type-submit{
-		justify-content: getValueByDirection(flex-end, flex-start);
-	}
+    &end .qazana-field-type-submit {
+        justify-content: getValueByDirection(flex-end, flex-start);
+    }
 }
 
 .qazana-button-align- {
-	@include btn-align();
+    @include btn-align();
 }
 
-@media screen and ( max-width: $screen-md-max ){
+@media screen and (max-width: $screen-md-max) {
 
-	.qazana-tablet-button-align- {
-		@include btn-align();
-	}
+    .qazana-tablet-button-align- {
+        @include btn-align();
+    }
 }
 
-@media screen and ( max-width: $screen-sm-max ){
+@media screen and (max-width: $screen-sm-max) {
 
-	.qazana-mobile-button-align- {
-		@include btn-align();
-	}
+    .qazana-mobile-button-align- {
+        @include btn-align();
+    }
 }
 
 // Form Messages
 .qazana-error {
 
-	.qazana-field {
-		border-color: $danger;
-	}
+    .qazana-field {
+        border-color: $danger;
+    }
 
-	.help-inline {
-		color: $danger;
-		font-size: 0.9em;
-	}
+    .help-inline {
+        color: $danger;
+        font-size: 0.9em;
+    }
 }
 
 .qazana-message {
-	margin: 10px 0;
-	font-size: 1em;
-	line-height: 1;
+    margin: 10px 0;
+    font-size: 1em;
+    line-height: 1;
 
-	&:before {
-		content: "\f00c";
-		display: inline-block;
-		font-family: fontawesome;
-		font-weight: normal;
-		font-style: normal;
-		vertical-align: middle;
-		margin-right: 5px;
-	}
+    &:before {
+        content: "\f00c";
+        display: inline-block;
+        font-family: fontawesome;
+        font-weight: normal;
+        font-style: normal;
+        vertical-align: middle;
+        margin-right: 5px;
+    }
 
-	&.qazana-message-danger {
-		color: $danger;
+    &.qazana-message-danger {
+        color: $danger;
 
-		&:before {
-			content: "\f00d";
-		}
-	}
+        &:before {
+            content: "\f00d";
+        }
+    }
 
-	&.form-message-success {
-		color: $success;
-	}
+    &.form-message-success {
+        color: $success;
+    }
 }
 
 // Form Submit Button
 .qazana-form {
 
-	.qazana-button {
+    .qazana-button {
 
-		& > span {
-			display: flex;
-			justify-content: center;
-		}
+        &>span {
+            display: flex;
+            justify-content: center;
+        }
 
-		&.qazana-size- {
+        &.qazana-size- {
 
-			&xs {
-				min-height: 32px;
-			}
+            &xs {
+                min-height: 32px;
+            }
 
-			&sm {
-				min-height: 40px;
-			}
+            &sm {
+                min-height: 40px;
+            }
 
-			&md {
-				min-height: 46px;
-			}
+            &md {
+                min-height: 46px;
+            }
 
-			&lg {
-				min-height: 58px;
-			}
+            &lg {
+                min-height: 58px;
+            }
 
-			&xl {
-				min-height: 72px;
-			}
-		}
-	}
+            &xl {
+                min-height: 72px;
+            }
+        }
+    }
 }
