--- a/assets/dev/scss/frontend/widgets/button.scss
+++ b/assets/dev/scss/frontend/widgets/button.scss
@@ -8,6 +8,14 @@
 
 .qazana-button {
     display: inline-block;
+    border-radius: 0;
+    border: none;
+    border-color: transparent;
+    background-color: transparent;
+    box-shadow: none;
+    text-shadow: none;
+    padding: 0;
+    margin: 0;
 
     .qazana-inline-content {
         border: none;
