--- a/assets/dev/scss/admin/_global.scss
+++ b/assets/dev/scss/admin/_global.scss
@@ -243,7 +243,7 @@ body {
 	}
 
 	h2 {
-		font-family: Roboto, Arial, Helvetica, Verdana, sans-serif;
+		font-family: $editor-font;
 		font-size: 32px;
 		font-weight: 300;
 		color: inherit;
