--- a/assets/css/editor-rtl.css
+++ b/assets/css/editor-rtl.css
@@ -154,7 +154,7 @@ a {
 
 body {
   color: #444;
-  font-family: Roboto, Arial, Helvetica, Verdana, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   font-size: 13px;
   font-weight: normal;
   line-height: 1;
@@ -448,7 +448,7 @@ body {
   content: '\e964'; }
 
 .qazana-button {
-  font-family: Roboto, Arial, Helvetica, Verdana, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   text-transform: uppercase;
   outline: none;
   border: none;
@@ -1456,7 +1456,7 @@ select {
     -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
             box-shadow: 0 0 8px rgba(0, 0, 0, 0.1); }
     .qazana-panel .qazana-panel-scheme-buttons .qazana-button {
-      font-family: Roboto, Arial, Helvetica, Verdana, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
       font-size: 11px;
       font-weight: 400; }
   .qazana-panel .qazana-panel-scheme-button-wrapper {
