--- a/assets/dev/scss/editor/panel/_schemes.scss
+++ b/assets/dev/scss/editor/panel/_schemes.scss
@@ -20,7 +20,7 @@
 	box-shadow: $panel-bottom-shadow;
 
 	.qazana-button {
-		font-family: Roboto, Arial, Helvetica, Verdana, sans-serif;
+		font-family: $editor-font;
 		font-size: 11px;
 		font-weight: 400;
 	}
@@ -185,7 +185,7 @@
 #qazana-panel-schemes-disabled {
 
 	a {
-		
+
 		&:hover {
 			text-decoration: underline;
 		}
